--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install system dependencies
+      run: sudo apt update && sudo apt install -y libdbus-1-dev pkg-config
     - name: Build
       run: cargo build --verbose
     - name: Run tests
