Add missing system dependencies to GitHub Actions workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install system dependencies
-      run: sudo apt update && sudo apt install -y libdbus-1-dev libglib2.0-dev libgirepository1.0-dev pkg-config
+      run: sudo apt update && sudo apt install -y libdbus-1-dev libglib2.0-dev libgirepository1.0-dev libgdk-pixbuf2.0-dev libpango1.0-dev pkg-config
     - name: Build
       run: cargo build --verbose
     - name: Run tests
